fix hamburger menu spacing for very small screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -624,7 +624,7 @@ a {
 		line-height: 130%;
 		float: left !important;
 		width: 270px;
-		padding: 3% 3% 3% 3%;
+		padding: 3% 3% 3% 20%;
 	}
 
 	.home {
